GNOME Bugzilla – Bug 654726
text: Fix the default value of "editable"
Last modified: 2011-07-18 14:28:41 UTC
It can break some applications that were relying on the wrong default behaviour.
Created attachment 192079 [details] [review] text: Fix the default value of "editable" The "editable" property is documented to default to FALSE, but is initialized to TRUE in the _init() function. Initialize "editable" as documented.
mmh, looking at Mx, it expects the Text actor to be !editable by default - same as St. so if we set editable = true by default they'd need to be changed. it's probably better to fix the default value of the GParamSpec instead.
Created attachment 192182 [details] [review] text: Fix the default value of "editable" The "editable" property is documented to default to TRUE, but is initialized to FALSE in the _init() function. Third party code would be affected if we changed the default to be TRUE, so we have to change the default value in the GParamSpec.
Attachment 192182 [details] pushed as 4d58534 - text: Fix the default value of "editable"